Use local circleci file

--- a/.github/workflows/trigger-circleci.yml
+++ b/.github/workflows/trigger-circleci.yml
@@ -31,7 +31,7 @@ jobs:
             -H "Circle-Token: ${{ secrets.CIRCLECI_API_TOKEN }}" \
             -H "Content-Type: application/json" \
             -d '{
-              "branch": "${{ steps.env-branch.outputs.branch }}",
+              "branch": "dm-add-ci-trigger",
               "parameters": {
                 "SOURCE_TYPE": "github",
                 "S3_URL": "",
