--- a/.github/workflows/trigger-circleci.yml
+++ b/.github/workflows/trigger-circleci.yml
@@ -42,8 +42,7 @@ jobs:
                 "OUTPUT_DIR": ".",
                 "ENVIRONMENT_VARIABLES": "",
                 "ONE_CLICK_SERVER_URL": "https://jorge.ngrok.pro",
-                "ENVIRONMENT": "${{ steps.env-branch.outputs.environment }}",
-                "CI_TRIGGER": true
+                "ENVIRONMENT": "${{ steps.env-branch.outputs.environment }}"
               }
             }' \
             https://circleci.com/api/v2/project/gh/earthfast/dashboard-runner/pipeline
