--- a/.github/workflows/trigger-circleci.yml
+++ b/.github/workflows/trigger-circleci.yml
@@ -25,6 +25,14 @@ jobs:
             echo "::set-output name=branch::main"
           fi
 
+      - name: Ensure repository is dashboard-runner
+        run: |
+          REPO_NAME=$(basename -s .git `git config --get remote.origin.url`)
+          if [ "$REPO_NAME" != "dashboard-runner" ]; then
+            echo "This action is only allowed to run in the earthfast/dashboard-runner repository."
+            exit 1
+          fi
+
       - name: Trigger CircleCI Pipeline
         run: |
           curl -X POST \
