--- a/.github/workflows/trigger-circleci.yml
+++ b/.github/workflows/trigger-circleci.yml
@@ -24,6 +24,14 @@ jobs:
             echo "::set-output name=branch::main"
           fi
 
+      - name: Ensure repository is dashboard-runner
+        run: |
+          REPO_NAME=$(basename -s .git `git config --get remote.origin.url`)
+          if [ "$REPO_NAME" != "dashboard-runner" ]; then
+            echo "This action is only allowed to run in the earthfast/dashboard-runner repository."
+            exit 0
+          fi
+
       - name: Trigger CircleCI Pipeline
         run: |
           curl -X POST \
@@ -41,7 +49,8 @@ jobs:
                 "OUTPUT_DIR": ".",
                 "ENVIRONMENT_VARIABLES": "",
                 "ONE_CLICK_SERVER_URL": "https://jorge.ngrok.pro",
-                "ENVIRONMENT": "${{ steps.env-branch.outputs.environment }}"
+                "ENVIRONMENT": "${{ steps.env-branch.outputs.environment }}",
+                "CI_TRIGGER": true
               }
             }' \
             https://circleci.com/api/v2/project/gh/earthfast/dashboard-runner/pipeline
