Overhaul env vars

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,6 @@ parameters:
     type: string
     default: "default"
     enum: ["default", "development", "staging", "sepolia-staging"]
-  ENVIRONMENT_VARIABLES:
-    type: string
-    default: ""
   GITHUB_ACCESS_TOKEN:
     type: string
     default: ""
@@ -47,7 +44,9 @@ parameters:
   CI_TRIGGER:
     type: boolean
     default: false
-
+  PROJECT_ID:
+    type: string
+    default: ""
 
 jobs:
   publish:
@@ -68,6 +67,7 @@ jobs:
             echo "ONE_CLICK_SERVER_URL: << pipeline.parameters.ONE_CLICK_SERVER_URL >>"
             echo "ENVIRONMENT: << pipeline.parameters.ENVIRONMENT >>"
             echo "CI_TRIGGER: << pipeline.parameters.CI_TRIGGER >>"
+            echo "PROJECT_ID: << pipeline.parameters.PROJECT_ID >>"
 
       - run:
           name: Check CI_TRIGGER
@@ -134,35 +134,64 @@ jobs:
             echo "  console.log(decryptData(input));" >> ~/project/decrypt.js
             echo "}" >> ~/project/decrypt.js
 
+      - when:
+          condition:
+            not:
+              equal: ["upload", "<< pipeline.parameters.SOURCE_TYPE >>"]
+          steps:
+            - run:
+                name: Decode secrets and environment variables
+                command: |
+                  set -e  # Exit immediately if a command exits with a non-zero status
+
+                  if [ -n "<< pipeline.parameters.SECRETS >>" ]; then
+                    echo "Downloading and decoding secrets..."
+
+                    # Configure AWS CLI
+                    aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+                    aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+                    aws configure set default.region $AWS_REGION
+
+                    # Download secrets file from S3
+                    aws s3 cp << pipeline.parameters.SECRETS >> ~/project/encrypted_secrets.json
+
+                    # Decrypt the secrets
+                    DECRYPTED_JSON=$(node ~/project/decrypt.js "$(cat ~/project/encrypted_secrets.json)")
+
+                    echo "$DECRYPTED_JSON" | jq -r 'to_entries | map("export \(.key)=\(.value|@sh)") | .[]' > ~/project/decrypted_secrets.txt
+                    source ~/project/decrypted_secrets.txt
+
+                    # Clean up
+                    rm ~/project/encrypted_secrets.json
+                  fi
+
+                  # Fetch environment variables from the One Click Server
+                  ENV_VARS_URL="<< pipeline.parameters.ONE_CLICK_SERVER_URL >>/projects/<< pipeline.parameters.PROJECT_ID >>/env-vars"
+                  ENV_VARS=$(curl -s -H "x-admin-key: $ADMIN_KEY" $ENV_VARS_URL)
+                  if [ $? -ne 0 ] || [ -z "$ENV_VARS" ]; then
+                    echo "Failed to fetch environment variables"
+                    exit 1
+                  fi
+
+                  echo "Fetched Environment Variables: $ENV_VARS"
+
+                  # Extract the environment variables string from the JSON response
+                  ENV_VARS_STRING=$(echo "$ENV_VARS" | jq -r '.environmentVariables')
+
+                  # Add 'export' to each line
+                  echo "$ENV_VARS_STRING" | sed 's/^/export /' > ~/project/environment_variables.txt
+
       - run:
-          name: Decode secrets and environment variables
+          name: Debug Environment Variables
           command: |
-            if [ -n "<< pipeline.parameters.SECRETS >>" ]; then
-              echo "Downloading and decoding secrets..."
+            echo "Contents of environment_variables.txt:"
+            cat ~/project/environment_variables.txt
 
-              # Configure AWS CLI
-              aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
-              aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
-              aws configure set default.region $AWS_REGION
+            echo "Loading environment variables..."
+            source ~/project/environment_variables.txt
 
-              # Download secrets file from S3
-              aws s3 cp << pipeline.parameters.SECRETS >> ~/project/encrypted_secrets.json
-
-              # Decrypt the secrets
-              DECRYPTED_JSON=$(node ~/project/decrypt.js "$(cat ~/project/encrypted_secrets.json)")
-
-              echo "$DECRYPTED_JSON" | jq -r 'to_entries | map("export \(.key)=\(.value|@sh)") | .[]' > ~/project/decrypted_secrets.txt
-              source ~/project/decrypted_secrets.txt
-
-              # Clean up
-              rm ~/project/encrypted_secrets.json
-            fi
-
-            if [ -n "<< pipeline.parameters.ENVIRONMENT_VARIABLES >>" ]; then
-              echo "Processing environment variables..."
-              echo "<< pipeline.parameters.ENVIRONMENT_VARIABLES >>" | sed 's/^/export /' > ~/project/environment_variables.txt
-              source ~/project/environment_variables.txt
-            fi
+            echo "Environment variables after loading:"
+            env
 
       - when:
           condition:
