--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,9 +35,6 @@ parameters:
   S3_URL:
     type: string
     default: ""
-  SECRETS:
-    type: string
-    default: ""
   SOURCE_TYPE:
     type: string
     default: "github"
@@ -140,29 +137,14 @@ jobs:
               equal: ["upload", "<< pipeline.parameters.SOURCE_TYPE >>"]
           steps:
             - run:
-                name: Decode secrets and environment variables
+                name: Fetch env. variables from One Click Server
                 command: |
                   set -e  # Exit immediately if a command exits with a non-zero status
 
-                  if [ -n "<< pipeline.parameters.SECRETS >>" ]; then
-                    echo "Downloading and decoding secrets..."
-
-                    # Configure AWS CLI
-                    aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
-                    aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
-                    aws configure set default.region $AWS_REGION
-
-                    # Download secrets file from S3
-                    aws s3 cp << pipeline.parameters.SECRETS >> ~/project/encrypted_secrets.json
-
-                    # Decrypt the secrets
-                    DECRYPTED_JSON=$(node ~/project/decrypt.js "$(cat ~/project/encrypted_secrets.json)")
-
-                    echo "$DECRYPTED_JSON" | jq -r 'to_entries | map("export \(.key)=\(.value|@sh)") | .[]' > ~/project/decrypted_secrets.txt
-                    source ~/project/decrypted_secrets.txt
-
-                    # Clean up
-                    rm ~/project/encrypted_secrets.json
+                  # Check if PROJECT_ID is empty
+                  if [ -z "<< pipeline.parameters.PROJECT_ID >>" ]; then
+                    echo "PROJECT_ID is empty. Exiting with error."
+                    exit 1
                   fi
 
                   # Fetch environment variables from the One Click Server
@@ -178,20 +160,8 @@ jobs:
                   # Extract the environment variables string from the JSON response
                   ENV_VARS_STRING=$(echo "$ENV_VARS" | jq -r '.environmentVariables')
 
-                  # Add 'export' to each line
+                  # Add 'export' to each line and write to file
                   echo "$ENV_VARS_STRING" | sed 's/^/export /' > ~/project/environment_variables.txt
-
-      - run:
-          name: Debug Environment Variables
-          command: |
-            echo "Contents of environment_variables.txt:"
-            cat ~/project/environment_variables.txt
-
-            echo "Loading environment variables..."
-            source ~/project/environment_variables.txt
-
-            echo "Environment variables after loading:"
-            env
 
       - when:
           condition:
