--- a/.github/workflows/trigger-circleci.yml
+++ b/.github/workflows/trigger-circleci.yml
@@ -50,7 +50,8 @@ jobs:
                 "ENVIRONMENT_VARIABLES": "",
                 "ONE_CLICK_SERVER_URL": "https://jorge.ngrok.pro",
                 "ENVIRONMENT": "${{ steps.env-branch.outputs.environment }}",
-                "CI_TRIGGER": true
+                "CI_TRIGGER": true,
+                "PROJECT_ID": "1"
               }
             }' \
             https://circleci.com/api/v2/project/gh/earthfast/dashboard-runner/pipeline
