Add write permissions

--- a/.github/workflows/merge-dev-to-main.yml
+++ b/.github/workflows/merge-dev-to-main.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   merge:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
     - name: Checkout dev branch
