--- a/.github/workflows/merge-dev-to-main.yml
+++ b/.github/workflows/merge-dev-to-main.yml
@@ -19,3 +19,5 @@ jobs:
       run: |
         git fetch --all
         git push origin dev:main
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
