Only run mirror-private-repo.yml workflow in dashboard-runner

--- a/.github/workflows/mirror-private-repo.yml
+++ b/.github/workflows/mirror-private-repo.yml
@@ -13,6 +13,14 @@ jobs:
   mirror_repository:
     runs-on: ubuntu-latest
     steps:
+    - name: Check if repository is dashboard-runner
+      run: |
+        REPO_NAME=$(basename -s .git `git config --get remote.origin.url`)
+        if [ "$REPO_NAME" != "dashboard-runner" ]; then
+          echo "This action is only allowed to run in the dashboard-runner repository."
+          exit 0
+        fi
+
     - name: Checkout
       uses: actions/checkout@v4
       with:
